# dynamic-loader

./: .gitignore  .travis.yml  DynamicLoader.hs  LICENSE  NameLoader.hs  PathLoader.hs  README.md  circle.yml  dynamic-loader.cabal
DynamicLoader/: DynamicLoader.hs  NameLoader.hs  PathLoader.hs
System/Plugins/: DynamicLoader.hs  NameLoader.hs  PathLoader.hs
System/Plugins/Criteria/: DynamicCriterion.hs  LoadCriterion.hs  UnsafeCriterion.hs
examples/dynamicloader/www/: Main.hs  Makefile  README
examples/dynamicloader/www/files/: index.html  index.upp
examples/dynamicloader/www/plugins/: Upper.hs
examples/nameloader/www/: Main.hs  Makefile  Page.hs  README
examples/nameloader/www/Sub/: Page.hs
examples/pathloader/www/: Main.hs
