Name:                dynamic-loader

Version:             0.0.1

Synopsis:            lightweight loader of GHC-based modules or packages

Description:         This package allows the linking against GHC-compiled
                     object files and shared libraries. Specialized modules
                     are provided for navigating directory structure and
                     dependency checking.
                     .
                     No attempt at type-safe loading of symbols is made.
                     .
                     Release history:
                     .
                     [0.0] Initial version (testing Hackage build)
                     [0.0.1] Added support for archives.

Homepage:            https://github.com/ggreif/dynamic-loader
Bug-reports:         https://github.com/ggreif/dynamic-loader/issues

License:             BSD3
License-file:        LICENSE

-- The package author(s).
Author:              Hampus Ram

Maintainer:          Gabor Greif <ggreif+dynamic@gmail.com>

Copyright:           Copyright (c) 2003-2004, Hampus Ram;
                               (c) 2012-2016, Gabor Greif

Category:            System

Stability:           experimental
Tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2

Build-type:          Simple

Data-files:          dynamic-linker.pdf

Cabal-version:       >= 1.6

Library
  -- Modules exported by the library.
  Exposed-modules:     System.Plugins.DynamicLoader, System.Plugins.PathLoader, System.Plugins.NameLoader
                       System.Plugins.Criteria.LoadCriterion, System.Plugins.Criteria.UnsafeCriterion

  Extensions:          CPP, ForeignFunctionInterface, MagicHash, ScopedTypeVariables, UnboxedTuples
                       KindSignatures, TypeFamilies, MultiParamTypeClasses, FlexibleInstances
                       ConstraintKinds

  -- Packages needed in order to build this package.
  Build-depends:       base >= 4.5 && < 5, directory, time, ghc-prim >= 0.2,
                       hashable, hashtables, transformers

  -- Modules not exported by this package.
  -- Other-modules:       

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

  Ghc-Options:         -Wall

Source-repository head
  type:     git
  location: git://github.com/ggreif/dynamic-loader.git
